src/main/resources/static/shiba.css
.page-wrapper .grid {
    max-width: 750px;
}

.page-wrapper .grid-ignore-mobile {
    max-width: 750px;
}

.page-wrapper {
    flex: 1 0 auto;
}

#landing-page .grid {
    max-width: 960px;
}

.intro-section {
    max-width: 35rem;
}

.boxed-content {
    padding: 2.5rem 1rem 2.5rem 1rem;
    margin: 2.5rem auto;
    border: 2px solid #AAAAAA;
    border-radius: 3px;
}

.builder-list {
    padding-right: 2.5rem;
}

.list-header {
    padding-left: 2.5rem;
}

.intro-box__title {
    margin-bottom: 20px;
}

.dob-input {
    display: inline-block;
    width: calc(30% - 3rem);
}

.bottom-horizontal-line {
    border-bottom: 1px solid black;
}

.bottom-horizontal-line-grey {
    border-bottom: 1px solid #CFC5BF;
}

.bottom-horizontal-line-dark-grey {
    border-bottom: 1px solid #AAAAAA;
}

.icon-check_circle.large {
    color: #CFC5BF;
    font-size: 100px;
}

.form-width--2-character {
    width: calc(4.4rem + 2ch);
    padding: 0 1.5rem;
}

.form-width--4-character {
    width: calc(4.4rem + 4ch);
    padding: 0 2rem;
}

.slab--shiba, body:not(#landing-page) {
    background-color: #E9F6FF;
}

.slab--minnesota-sky-blue {
    background-color: rgba(155, 203, 235, 0.25);
}

.footer-minnesota-blue {
    color: #FFF;
    background-color: #003865;
}

.font-white {
    color: white;
}

@media screen and (min-width: 601px) {
    .card {
        margin-bottom: 6rem;
        padding: 6rem 16rem;
    }
}

.main-footer {
    position: relative;
    height: auto !important;
    flex-shrink: 0;
}

body {
    display: flex;
    flex-direction: column;
    margin-bottom: unset;
    height: 100%;
}

.body-gray {
    color: #5F5854;
}

html {
    height: 100%;
}

.textarea-readonly {
    font-weight: normal;
    font-size: 16px;
    border: none;
    box-shadow: none;
    overflow-wrap: break-word;
    border-radius: 6px;
    width: 100%;
    padding: 1.5rem;
    line-height: 2.5rem;
    margin-bottom: 1.5rem;
    background-color: #FFF;
    border: solid 2px #000;
}

.legal-stuff-window {
    height: 35rem;
    overflow-y: scroll;
    padding-right: calc(1.5rem + 12px);
}

.legal-stuff-window div {
    margin-bottom: 8px;
    line-height: 1.5;
}

.legal-stuff-window .h3 {
    margin-bottom: 10px;
    font-size: 19px;
    font-weight: bold;
}

.legal-stuff-window .h4 {
    font-size: 16px;
    font-weight: bold;
    margin-bottom: 8px;
}

.textarea-readonly::-webkit-scrollbar {
    -webkit-appearance: none;
}

.textarea-readonly::-webkit-scrollbar:vertical {
    width: 12px;
}

.textarea-readonly::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 1);
    border-radius: 10px;
    border: 2px solid #ffffff;
}

.textarea-readonly::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #ffffff;
}

.main-footer {
    font-weight: normal;
}

.hide-radio-circle {
    -webkit-appearance: none !important;
    -moz-appearance: none !important;
    -ms-appearance: none !important;
    -o-appearance: none !important;
    appearance: none !important;
    display: none !important;
}

.inline {
    display: inline-block;
    width: 100%;
}

.right {
    float: right;
}

.review-info-section {
    border-color: #CFC5BF;
    padding-bottom: 2.5rem;
}

.italic {
    font-style: italic;
}

.padding-horizontal-30 {
    padding-left: 3rem;
    padding-right: 3rem;
}

.padding-right-25 {
    padding-right: 2.5rem;
}

.padding-right-10 {
    padding-right: 1rem;
}

.vertical-button-group .button {
    margin-left: 0;
}

/* Upload Documents Page Styles */

@media screen and (min-width: 601px) {
    .hide-on-desktop {
        display: none;
    }

    .drag-and-drop-box {
        border: 2px dashed rgba(0, 56, 101, 0.7);
        border-radius: 5px;
        padding-top: 8rem;
        padding-bottom: 13rem;
        background-color: #F7F5F4;
        box-sizing: border-box;
    }

    .drag-over {
        box-shadow: 0 0 0 5px #FFAE00;
        box-sizing: border-box;
        border-radius: 8px;

        border: 2px solid #F7F5F4
    }

    .drag-and-drop-box:hover {
        cursor: pointer;
    }

    .drag-and-drop-box h2 {
        user-select: none;
    }

    /*.drag-and-drop-box:hover .hide-on-mobile  {*/
    /*    margin-top: -3px;*/
    /*}*/

    /*.drag-and-drop-box:hover .needsclick {*/
    /*    margin-bottom: -3px;*/
    /*}*/

    .drag-and-drop-box * {
        pointer-events: none;
    }
}

@media screen and (max-width: 600px) {
    .hide-on-mobile {
        display: none;
    }
}

.narrow-centered-text {
    max-width: 190px;
    margin-left: auto;
    margin-right: auto;
}

.dz-button {
    border: none;
    border-radius: 50%;
    font-size: 6rem;
    background-color: #003865;
    padding: 1rem;
    color: #FFF;
    -webkit-box-shadow: 0 8px 6px -6px gray;
    -moz-box-shadow: 0 8px 6px -6px gray;
    box-shadow: 0 8px 6px -6px gray;
    line-height: 6rem;
}

.dz-button:hover {
    background-color: #00223D;
    color: #FFF;
}

.blue-label {
    color: #003865;
    font-weight: normal;
}

.reveal-adjacent {
    border: 2px solid #034E46;
    border-radius: 10px;
    position: relative;
}

.reveal-purple {
    border: 2px solid #741078;
}

.reveal-purple h3 {
    color: #000;
    margin-bottom: 0;
}

.reveal-purple .reveal__link {
    color: #741078;
    background-color: #FFF5FF;
}

.reveal-purple .reveal__content-adjacent {
    background-color: #FFF5FF;
    color: #000;
    border-top: solid 2px #741078;
}

.reveal-purple .reveal-icon svg {
    fill: #741078;
}

.reveal__link__header-adjacent {
    display: inline-block;
    padding: .3em .5em .3em .7em;
}

.reveal__link-adjacent {
    width: 100%;
    padding: unset;
    border: unset;
}

.reveal__link-adjacent:after {
    position: absolute;
    top: 0.7rem;
    right: 1rem;
}

.is-hidden .reveal__link-adjacent {
    border-radius: inherit;
}

.reveal-icon {
    position: relative;
    top: 3px;
    left: 9px;
    margin-left: 16px;
}

/*noinspection CssReplaceWithShorthandSafely*/
.reveal__content-adjacent {
    margin-top: 0;
    border: unset;
    border-top-left-radius: unset;
    border-top-right-radius: unset;
    border-top: 2px solid #034E46;
    background-color: #EBFFFA;
    color: #034E46;
}

.job-context-employer-name {
    color: #5F5854;
    border-bottom: 2px solid #AAAAAA;
    padding-bottom: 0.5rem;
}

.splash {
    max-width: none;
    margin-top: 74px;
}

.illustration--cfa-logo {
    background-image: url(/images/code-for-america-logo_white.svg);
    margin-left: 0;
    background-size: 126px 84px;
}

.mn-logo {
    width: 50%;
}

.capitalized {
    text-transform: capitalize;
}

.footer__privacy-policy-link:hover {
    color: rgb(230, 242, 250);
}

.no-button {
    margin-left: 0;
    margin-right: 0;
}

.feedback-buttons-group {
    display: flex;
    flex-direction: row;
}

.feedback-buttons {
    margin-right: 20px;
    cursor: pointer;
    width: 10rem;
    text-align: center;
    border: 1px solid #5F5854;
    border-radius: 4px;
    height: 10rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    box-sizing: border-box;
}

.feedback-buttons i {
    font-size: 5rem;
}

.textarea {
    resize: none;
}

input:checked + .feedback-buttons {
    border: 2px solid #000000;
}

input[id='happy']:checked + .feedback-buttons {
    background-color: rgba(143, 228, 37, 0.5);
}

input[id='meh']:checked + .feedback-buttons {
    background-color: rgba(255, 200, 69, 0.5);
}

input[id='sad']:checked + .feedback-buttons {
    background-color: #F8C7B5;
}

.text--green {
    font-weight: 700;
    font-size: 1.6rem;
    line-height: 2.5rem;
}

.address-validation .radio-button.is-selected {
    border: 2px #00891B solid;
    border-radius: 5px;
    background-color: unset;
}

.address-validation .radio-button.left-aligned {
    padding-left: 2.5rem;
}

.address-validation .radio-button {
    border: 2px transparent solid;
    border-radius: 5px;
}

.address-validation .radio-button div {
    font-weight: normal;
}

.display-flex {
    display: flex;
}

.align-self-end {
    align-self: flex-end;
}

.word-wrap-break-word {
    word-wrap: break-word;
}

/* MaterialIcons that haven't been added to honeycrisp variables.scss */
.checkbox-icons {
    font-weight: bold;
    max-width: 2rem;
    min-width: 2rem;
    padding-top: .25rem;
    margin-right: 1rem;
}

.checkbox-icons svg {
    width: 100%;
    height: auto;
}

label.checkbox p.text--help {
    font-weight: 400;
    padding-top: 1rem;
}

/* CSS styling to remove scroll from number input types */
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Firefox */
input[type=number] {
    -moz-appearance: textfield;
}

/* Branding Phase 2 Link styles */
.slab a:not(.button):not(.reveal__link),
.slab a:not(.button):not(.reveal__link):focus,
.button--link,
.button--link:focus {
    color: #003865;
}

.slab a:not(.button):not(.reveal__link):hover,
.slab a:not(.button):not(.reveal__link):active,
.button--link:hover,
.button--link:active {
    color: #741078;
}

.language-select {
    background: transparent;
}

.language-selector {
    border: none;
    font-weight: bold;
    font-size: 1.6rem;
}

.language-selector, .language-select:after {
    color: #E9F6FF;
}

.toolbar__wrapper {
    background: #003865;
    margin-left: -1.5rem;
    margin-right: -1.5rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    max-width: 100vw;
    height: 6rem;
    font-size: 1.6rem;
}

@media screen and (min-width: 601px) {
    .toolbar__wrapper {
        margin-left: -3.5rem;
        margin-right: -3.5rem;
        padding-left: 3.5rem;
        padding-right: 3.5rem;
    }
}

.toolbar {
    margin-top: 0;
}

.toolbar__wrapper .toolbar__left, .toolbar__wrapper .toolbar__right {
    margin-top: 0.1rem;
}

.logo a {
    color: #E9F6FF;
    text-decoration: none;
    font-weight: bold;
}

.mn-state-icon {
    width: 38px;
    vertical-align: -15px;
}

.success-icons svg {
    max-width: 36px;
}

.select__element:focus {
    box-shadow: inset 0 0 0 5px #FFAE00;
}

/* Changes from Honeycrisp.css that were migrated here */

@font-face {
    src: url(/fonts/icomoon.eot?ia7soh);
    src: url(/fonts/icomoon.eot?ia7soh#iefix) format("embedded-opentype"), url(/fonts/icomoon.ttf?ia7soh) format("truetype"), url(/fonts/icomoon.woff?ia7soh) format("woff"), url(/fonts/icomoon.svg?ia7soh#icomoon) format("svg");
    font-family: 'MaterialIcons-Regular';
    src: url(/fonts/MaterialIcons-Regular.eot?ia7soh);
    src: url(/fonts/MaterialIcons-Regular.eot?ia7soh#iefix) format("embedded-opentype"),
    url(/fonts/MaterialIcons-Regular.ttf?ia7soh) format("truetype"),
    url(/fonts/MaterialIcons-Regular.woff?ia7soh) format("woff"),
    url(/fonts/MaterialIcons-Regular.svg?ia7soh#MaterialIcons-Regular) format("svg");
    font-weight: normal;
    font-style: normal;
}

.scroller:before, .reveal__link:after, .flash__message:before, .checkbox input[type='checkbox']:checked:before, [class^="icon-"], [class*=" icon-"] {
    font-family: 'MaterialIcons-Regular' !important;
}

.emoji--checkmark {
    background-image: url(images/checkmark.png);
}

.emoji--crossmark {
    background-image: url(images/crossmark.png);
}

.radio-button.is-selected, .checkbox.is-selected {
    background-color: #EEFFE6;
}

.button--primary {
    color: #FFFFFF;
    background-color: #003865;
    border-color: #003865;
    box-shadow: 0 2px 0 #00088E;
}

.button--primary:hover {
    border-color: #00223D;
    background-color: #00223D;
    color: #FFFFFF;
}

